# netcup-client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: get_dnsrecords.rs  get_dnszone.rs  main.rs  update_dnsrecords.rs  update_dnszone.rs
src/: client.rs  lib.rs
src/actions/: dnsrecord.rs  dnszone.rs  login.rs  logout.rs  mod.rs  request.rs
src/models/: dnsrecord.rs  dnszone.rs  login.rs  mod.rs  responses.rs
