[package]
name = "netcup-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }