[package]
name = "netcup-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sissto <contact@sissto.com>"]
description = "Wrapper client for the netcup DNS API"
readme = "README.md"
homepage = "https://github.com/sissto/netcup-client"
repository = "https://github.com/sissto/netcup-client"
keywords = ["netcup", "dns", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
